[package]
name = "learn_rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
chrono = "0.4.19"
parking_lot = "0.12"
pkg-config = "0.3.19"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.64"
time = { version = "0.3.7", features = [
    "formatting",
    "macros",
    "local-offset",
    "parsing",
    "serde",
] }
