[package]
name = "learn_rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.11.1"
pkg-config = "0.3.19"
serde = "1.0.126"
serde_json = "1.0.64"
thiserror = "1.0.30"

[profile.dev]
opt-level = 0
debug = 2
