[package]
name = "protobuf-examples"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
protobuf = { version = "2", features = ["with-bytes", "with-serde"] }

[build-dependencies]
protobuf-codegen-pure = "2"
