[package]
name = "protobuf-examples"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.68"
# protobuf = { version = "2.25.1", features = ["with-bytes", "with-serde"] }
protobuf = { git = "https://github.com/stepancheg/rust-protobuf.git", branch = "master", features = [
    "with-bytes",
    "with-serde",
] }

[build-dependencies]
protobuf-codegen-pure = { git = "https://github.com/stepancheg/rust-protobuf.git", branch = "master" }
# protobuf-codegen-pure = "2.25.1"
