[package]
name = "realsense_examples"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
crossbeam-channel = "0.5.1"
env_logger = "0.9.0"
log = "0.4.14"
rayon = "1.5.1"
realsense-rust = "1.1.0"
serde_json = "1.0.68"
spin_sleep = "1.0.0"
