[package]
name = "rust-esp32c3-example"
version = "0.1.0"
authors = ["maxu <imxood@gmail.com>"]
edition = "2018"
resolver = "2"

[dependencies]
esp-idf-sys = { version = "0.24.3", features = [
    "native",
    "binstart",
], default-features = false }
# esp32-hal = "0.3.0"
# esp32c3 = "0.3.0"
# xtensa-lx = "0.4.0"

[build-dependencies]
embuild = "0.25"
anyhow = "1"

[profile.release]
codegen-units = 1
opt-level = 'z'
lto = true
