[package]
name = "rust-esp32c3-example"
version = "0.1.0"
authors = ["maxu <imxood@gmail.com>"]
edition = "2018"
resolver = "2"

[dependencies]
anyhow = "1.0.45"
esp-idf-sys = { version = "0.24.3", features = ["binstart"] }
esp-idf-hal = { version = "0.23.2" }
esp-idf-svc = "0.28.1"
st7735-lcd = "0.8.1"
embedded-graphics = "0.7.1"
embedded-hal = "0.2.6"
embedded-svc = "0.12.0"
# embedded-svc = "0.12"
# esp32c3 = "0.3.0"

[build-dependencies]
embuild = "0.25"
anyhow = "1"

[profile.release]
codegen-units = 1
opt-level = 'z'
lto = true
