[package]
name = "esp32c3-example"
version = "0.1.0"
authors = ["imxood <imxood@163.com>"]
edition = "2018"
resolver = "2"

[profile.release]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[profile.dev]
opt-level = "s"

[dependencies]
# anyhow = "1.0.45"
esp-idf-sys = { version = "0.24", features = ["binstart"] }
esp-idf-hal = { version = "0.24" }
# esp-idf-svc = "0.29"
esp-idf-svc = { git = "https://github.com/planet0104/esp-idf-svc" }
st7735-lcd = "0.8.1"
embedded-graphics = "0.7.1"
embedded-hal = "0.2.6"
embedded-svc = "0.12"
embedded_font = "0.1.3"
rusttype = "0.9.2"


[build-dependencies]
embuild = "0.25"
anyhow = "1"
