[package]
name = "rust-stm32f746-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Access to the generic ARM peripherals
cortex-m = "0.7"

# Startup code for the ARM Core
cortex-m-rt = "0.6.15"
embedded-graphics = "0.7.1"

# Access to generic embedded functions (`set_high`)
embedded-hal = "0.2.6"

# Panic handler
panic-halt = "0.2.0"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
ssd1306 = "0.7.0"

# Access to the STM32F103 HAL.
stm32f7xx-hal = { version = "0.5", features = ["stm32f746", "rt"] }

[profile.release]
codegen-units = 1
debug = true
lto = true
