[package]
name = "tokio_examples"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
eframe = { git = "https://github.com/emilk/egui.git" }
futures = "0.3.19"
futures-util = "0.3.19"
tokio = { version = "1.15.0", features = ["full"] }
