[package]
name = "tracing_examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = { version = "0.3.5", features = ["macros"] }
tracing = "0.1.29"
tracing-appender = "0.2.0"
tracing-subscriber = {version = "0.3.2", features = ["local-time"]}
tracing-unwrap = "0.9.2"
