[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2018"

[build-dependencies]
protobuf-codegen-pure = { git = "https://github.com/stepancheg/rust-protobuf.git", branch = "master" }
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
tauri = { version = "1.0.0-beta.8", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
poem = { version = "1.0.0", features = ["websocket"] }
tokio = { version = "1.12.0", features = ["rt-multi-thread", "time", "net"] }
futures-util = "0.3.17"
log = "0.4.14"
flexi_logger = "0.19.4"
anyhow = "1.0.44"
bytes = "1.1.0"
async-trait = "0.1.51"
protobuf = { git = "https://github.com/stepancheg/rust-protobuf.git", branch = "master", features = [
    "with-bytes",
    "with-serde",
] }


[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
